[package]
name = "bin_data_types_rust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
# name = "bin_data_types_rust"
crate-type = ["cdylib"]

# [features]
# unstable = [
#     "generic_const_exprs"
# ]
